# ai-rpa

./: .gitignore  APP_LAUNCHER.md  Cargo.toml  QWEN.md  SELECTOR_RECORDER.md  SELECTOR_USAGE.md
.qwen/: PROJECT_SUMMARY.md  settings.json
core/: Cargo.toml
core/examples/: click_notepad.rs  record_selector.rs  registry_demo.rs  rpa_gui_prototype.rs
core/src/: app_launcher.rs  click_tool.rs  close_tool.rs  condition_tool.rs  double_click_tool.rs  drag_drop_tool.rs  extract_tool.rs  highlight.rs  highlight_overlay.rs  key_press_tool.rs  lib.rs  move_mouse_tool.rs  read_file_tool.rs  resolve.rs  retry_tool.rs  right_click_tool.rs  screenshot_tool.rs  selector.rs  selector_recorder.rs  tool.rs  tool_registry.rs  type_tool.rs  wait_for_element_tool.rs  wait_tool.rs  write_file_tool.rs
core/tests/: test_resolve.rs  test_type_tool.rs
examples/: explore_notepad.rs  record_selector.rs  registry_demo.rs  rpa_gui_prototype.rs  using_recorded_selector.rs
frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  tauri.ts  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: BlockNode.tsx  BlockPalette.tsx  DiagramTabBar.tsx  FlowCanvas.tsx  LogPanel.tsx  PropertiesPanel.tsx  TopBar.tsx
frontend/src/store/: dragStore.ts
src/: app_launcher.rs  click_tool.rs  highlight.rs  highlight_overlay.rs  lib.rs  main.rs  selector.rs  selector_recorder.rs  tool.rs
