[package]
name = "ai-rpa"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uiautomation = { version = "0.24.4", features = ["pattern"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
]}

[dev-dependencies]
egui = "0.31"
eframe = "0.31"

[[test]]
name = "test_type_tool"
path = "tests/test_type_tool.rs"
